098 ==> 270168 : Select Tool item in edit window all 46 icons idle.
099 ==> 266674 : Green grid in images imported from raw file (cr2).
100 ==> 270365 : Drag & drop picture in upwards folder collapses and reopens it.
101 ==> 231536 : Save As New File.
102 ==> 271153 : Tokina AT-X 107 AF DX Fish-eye not recognised.
103 ==> 271551 : digiKam crashes when trying to move the same album twice in parallel.
104 ==> 266211 : Media-gfx/digikam-1.8.0 crash on exit.
105 ==> 271252 : digiKam crashes while scanning for new pictures on the same drive it worked before.
106 ==> 217886 : Database and visualization error when renaming folders.
107 ==> 269289 : Rename scrambles order of files. 
108 ==> 228718 : Renaming doesn't allow [file]{r:"%20"," "}.[ext]. 
109 ==> 235928 : digiKam fails to open database at startup.
110 ==> 271916 : digiKam crashed when opening editor.
111 ==> 272133 : Crash editing Geo coordinates of several images.
112 ==> 272216 : Compile error: No rule to make target /usr/lib/libm.so, required for lib/libkdcraw.so.20.0.0.
113 ==> 272569 : Crashing in start.
114 ==> 271651 : 2.0 beta4 can't use network shares.
115 ==> 269320 : After initial database building thumbnails fail to rezise properly.
116 ==> 272529 : digiKam crashing on load.
117 ==> 233770 : Error messages after changing to mysql.
118 ==> 271924 : digiKam fail to create/update mysql database on startup [PATCH].
119 ==> 258409 : Tags and TagsTree table is empty after DB migration from sqlite to mysql.
120 ==> 257183 : Failed to add tag to database.
121 ==> 262231 : Missing records after migration from SQLite to digiKam.
122 ==> 267733 : Automatical initialisation of Internal MySQL database doesn't work after digikam start.
123 ==> 254533 : Make MySQL support as optional dependency [patch].
124 ==> 271598 : digiKam crashes while downloading photos.
125 ==> 269375 : face tags count error.
126 ==> 269291 : function "View->Include tag subtree" does not function on "People".
127 ==>